Update user install flow and timestamp format (#2)
* minor update to readme

* update format

* go fmt, timestamp changes

* ts changes
